--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "method-override": "^3.0.0",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.20",
+    "mongoose-findorcreate": "^3.0.0",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-reddit": "^0.2.4",
