--- a/sCrappy/package.json
+++ b/sCrappy/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "scrappy",
-  "version": "1.0.0",
-  "description": "Gets data for the api server",
-  "main": "scrape.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.19.2",
-    "dotenv": "^8.2.0",
-    "fast-csv": "^4.3.1"
-  }
+    "name": "scrappy",
+    "version": "1.0.0",
+    "description": "Gets data for the api server",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon index.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "axios": "^0.19.2",
+        "dotenv": "^8.2.0",
+        "fast-csv": "^4.3.1",
+        "mongoose": "^5.9.25",
+        "mongoose-findorcreate": "^3.0.0",
+        "nodemon": "^2.0.4"
+    }
 }
