--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "src/index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node ."
+        "start": "node .",
+        "scrappy": "nodemon scrappy/index.js"
     },
     "repository": {
         "type": "git",
@@ -33,5 +34,9 @@
         "morgan": "^1.10.0",
         "passport": "^0.4.1",
         "passport-reddit": "^0.2.4",
+        "fast-csv": "^4.3.1"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.4"
     }
 }
