--- a/package.json
+++ b/package.json
@@ -26,15 +26,16 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-session": "^1.17.1",
+        "fast-csv": "^4.3.1",
         "jsonwebtoken": "^8.5.1",
         "method-override": "^3.0.0",
         "mongodb": "^3.5.9",
         "mongoose": "^5.9.20",
         "mongoose-findorcreate": "^3.0.0",
         "morgan": "^1.10.0",
+        "node-schedule": "^1.3.2",
         "passport": "^0.4.1",
-        "passport-reddit": "^0.2.4",
-        "fast-csv": "^4.3.1"
+        "passport-reddit": "^0.2.4"
     },
     "devDependencies": {
         "nodemon": "^2.0.4"
