--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node .",
+        "dev": "nodemon api/index.js",
         "scrappy": "nodemon scrappy/index.js"
     },
     "repository": {
