--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "A stock trading app with fake money but real tears. Inspired by r/wallstreetbets.",
     "main": "src/index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "mocha 'test/**/*.js' --recursive -r dotenv/config --timeout 60000 --exit",
         "start": "node .",
         "dev": "nodemon api/index.js",
         "scrappy": "nodemon scrappy/index.js"
@@ -39,6 +39,8 @@
         "passport-reddit": "^0.2.4"
     },
     "devDependencies": {
+        "chai": "^4.2.0",
+        "mocha": "^8.0.1",
         "nodemon": "^2.0.4"
     }
 }
